<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/h1"
            android:text="@string/sorry"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image"
            android:layout_centerHorizontal="true"
            android:src="@drawable/no_internet"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/h1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/h2"
            android:text="@string/please"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/image"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/retry"
            android:text="@string/retry"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:layout_below="@+id/h2"/>

    </RelativeLayout>

</LinearLayout>