<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.wael.alameen.worldonlineshopping.RequestActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:layout_scrollFlags="enterAlways|scroll"
            app:theme="@style/MyDrawerArrowToggle"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/send"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/price"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hint1"
                android:text="@string/color"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/logo"/>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/colors_linear"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:layout_below="@+id/hint1">-->

            <!--</LinearLayout>-->

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/colors"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/hint1">

            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hint2"
                android:text="@string/size"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/colors"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/sizes"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/hint2">

            </Spinner>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/num"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/want_num"
                android:layout_below="@+id/sizes"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ok"
                android:text="@string/confirm"
                android:background="@color/colorAccent"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/num"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
