<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context="com.wael.alameen.worldonlineshopping.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:layout_scrollFlags="enterAlways|scroll"
            app:theme="@style/MyDrawerArrowToggle"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:gravity="center"
                android:maxLength="20"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/image_viewpager"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear"
                android:background="@color/white"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/image_viewpager">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:id="@+id/new_price"
                    android:text="100 $"
                    android:visibility="invisible"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="right" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:id="@+id/price"
                    android:text="100 $"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear2"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_below="@+id/linear">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:text="The Name of The Item"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/desc"
                    android:text="The Description of The Item"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear3"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_below="@+id/linear2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/size"
                    android:text="@string/sizes"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_sizes">

                </android.support.v7.widget.RecyclerView>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buy"
                    android:text="@string/buy"
                    android:textColor="@color/black"
                    android:background="@color/colorAccent"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear3"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hint"
                    android:text="@string/related"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:padding="10dp"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/hint">

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/related"
                        android:layout_marginTop="10dp">

                    </android.support.v7.widget.RecyclerView>

                </HorizontalScrollView>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
